--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "jest": "^26.6.0",
     "mysql2": "^2.2.5",
     "node": "^14.14.0",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
   }
 }
